# SignalSculptor

./: .gitignore  Antigravity_Conversation_20251214_0154.md  Antigravity_Conversation_20251218_235137.md  CursorAIAgent_20251213_161346.md  DEPLOY.md  Dockerfile  README.md  envoy.yaml  index.html  nginx.conf  package-lock.json  package.json  run_all.sh
cpp_server/: CMakeLists.txt  SignalLib.cpp  SignalLib.h  compile_wasm.sh  main.cpp  service_impl.cpp  service_impl.h  wasm_binding.cpp
protos/: signal.proto
public/wasm/: signal_lib.wasm
src/: App.tsx  constants.ts  types.ts
src/api/: grpc_client.ts  service_definition.ts  wasm_client.ts
src/api/wasm/: signal_lib.js
src/components/: AnalogToAnalogMode.tsx  AnalogToDigitalMode.tsx  BenchmarkMode.tsx  BenchmarkSection.tsx  DigitalToAnalogMode.tsx  DigitalToDigitalMode.tsx  SignalChart.tsx
src/utils/: analogToAnalog.ts  analogToDigital.ts  benchmark.ts  digitalToAnalog.ts  digitalToDigital.ts
